--- a/HeardHospitality/HeardHospitality/HeardHospitality.csproj
+++ b/HeardHospitality/HeardHospitality/HeardHospitality.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.2.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Node.js" Version="5.3.0" />
     <PackageReference Include="popper.js" Version="1.16.1" />
   </ItemGroup>
